# smallrender

./: .gitignore  .gitmodules  CMakeLists.txt  Todo.md  Todo.txt  camera.h  defines.h  main.cpp  render.cpp  render.h  tests.cpp  triangle.cpp  vector3.cpp
render/: CMakeLists.txt  box3.cpp  box3.h  camera.cpp  camera.h  color_argb.cpp  color_argb.h  color_rgb.cpp  color_rgb.h  defines.h  frustum.cpp  frustum.h  geom_object.cpp  geom_object.h  ggx_model.cpp  ggx_model.h  helper_gltf.cpp  helper_gltf.h  i_light.h  i_object.h  i_obvolume.h  light.cpp  light.h  light_ambient.h  light_base.h  light_directional.h  light_factory.cpp  light_factory.h  light_point.h  material.cpp  material.h  material_manager.cpp  material_manager.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  ob_box.cpp  ob_box.h  ob_sphere.cpp  (+28 more)
scenes/: scene1.blend  scene1.gltf  scene2.blend  scene3.blend  scene3.gltf  scene4.blend  scene4.blend1  scene4.gltf  scene5.blend  scene5.blend1  scene5.gltf  scene6.blend  scene6.gltf  scene6_a.blend  scene6_b.blend  scene6_b.gltf  scene7.blend  scene8.blend  scene8a.blend  scene9.blend  test_obvolume.blend  test_obvolume.gltf  triangle.blend  triangle.gltf  triangle1.blend  triangle2.blend  triangle2.gltf
